# qx-cli-assistant

./: .env  .gitignore  README.md  V2_IMPLEMENTATION_STATUS.md  debug_background.py  debug_buffer_size.py  debug_parser.py  debug_routing.py  debug_state.py  debug_team.py  inquirer_demo.py  package-lock.json  package.json  pyproject.toml  qx.conf.example  qx.py  sum.py  test.db  test_agent_invocation_plugin.py  test_app_simple.py  test_async_context.py  test_async_debug.py  test_background.py  test_background2.py  test_clean_run.sh  test_delegation.py  test_force_color.py  test_hanging_debug.py  test_inline_issue.py  test_inline_lists.py  test_minimal_fix.py  test_mixed_content.py  test_problematic.py  test_real_code.py  test_real_inline.py  test_routing_fix.py  test_simple.py  test_star_lists.py  test_team_mode_fix.py  test_track_component.py  (+4 more)
.Q/: mcp_servers.json  project-stages.md  project.md  projectlog.md  team.json
.Q/.Q/config/: team-config.json
.Q/.Q/sessions/: qx_session_20250614_185204_298237.json
.Q/agents/: Python Coder.agent.yaml  data_analyst.agent.yaml  full_stack_swe.agent.yaml  task_manager.agent.yaml
.Q/config/: qx.conf  team-config.json  team.json
.Q/documentation/: filesystem-mcp-server-docs.md  markitdown-docs.md  openai.md  openrouter.md  pydaticai-docs.md  python-dotenv-docs.md  python-prompt-toolkit-docs.md  python-rich-docs.md  shell-mcp-server-docs.md  textual.md
.Q/sessions/: qx_session_20250524_124857.json  qx_session_20250524_125442.json  qx_session_20250524_125937.json  qx_session_20250524_130018.json  qx_session_20250607_111648_961680.json  qx_session_20250607_111708_037035.json  qx_session_20250607_120902_340405.json  qx_session_20250607_124616_893837.json  qx_session_20250607_125352_073320.json
.qx/: team.json
.tmp/: list_pygments_styles.py  show_diff_themes_manual.py  test_approval.txt
.tmp/.Q/sessions/: qx_session_20250602_173445_577130.json
docs/: AGENTS.md  AGENT_MANAGER.md  CONSOLE_MANAGER.md  DIRECTIVES.md  HOTKEYS.md  MODEL_PROVIDERS.md  RELIABILITY.md  SUBSYSTEMS.md  TOOL_DEVELOPMENT.md
examples/: agent_delegation_example.py  agent_invocation_example.py  code2_with_docstrings.py  example.agent.yaml  find_unused_imports.py  minimal.agent.yaml  practical.agent.yaml  qx.conf.example  specialized_agents.yaml
src/: final_markdown_demo.py  main.py
src/cli/: __init__.py  qprompt.py
src/core/: __init__.py  llm.py
src/qx/: __init__.py  api.py  main.py  main_original.py  main_textual_backup.py
src/qx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/qx/agents/: agent-writer.agent.yaml  code-writer.agent.yaml  code_analyzer.agent.yaml  code_reviewer.agent.yaml  context_compressor.agent.yaml  data_processor.agent.yaml  devops_automation.agent.yaml  director.agent.yaml  documentation_writer.agent.yaml  project_manager.agent.yaml  qx-director.agent.yaml  qx.agent.yaml  qx.supervisor.agent.yaml  task_decomposer.system.agent.yaml  task_delegator.system.agent.yaml  team_supervisor.system.agent.yaml  tester.agent.yaml
tmp/: commit_message.txt  hello.py  hello_world.py  multiply.py  pt_example.py  sum.py  test_all_themes_diff.py  test_config_manager.py  test_hello_world.py  test_option_selector.py  test_rrt.py  test_rrt_diff.py  test_textual_richlog.py
utils/: interactive_test.py  simple_selector_example.py
(+115 files in other folders)
