[project]
name = "qx"
version = "0.3.42"
description = "QX is a coding cli agent built by Transparently.AI"
authors = [{ name = "Transparently.AI", email = "mauro@transparently.ai" }]
dependencies = [
    "python-dotenv>=1.0.1",
    "pyfzf>=0.0.8",
    "pydantic>=2.7.1",
    "openai>=1.23.6",
    "httpx>=0.27.0",
    "markitdown",
    "mcp>=1.9.1",
    "markdown-it-py>=3.0.0",
    "prompt-toolkit>=3.0.0",
    "rich==13.7.1",
    "pygments>=2.19.1",
    "mypy>=1.16.0",
    "ruff>=0.11.12",
    "black>=25.1.0",
]
readme = "README.md"
requires-python = ">= 3.13"

[project.scripts]
qx = "qx.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/qx"]

[tool.uv.sources]
qx = { workspace = true }

[dependency-groups]
dev = [
    "qx",
]
