[project]
name = "qx"
version = "0.3.45"
description = "Qx is a coding cli agent built by Transparently.AI"
authors = [{ name = "Transparently.AI", email = "mauro@transparently.ai" }]
dependencies = [
    "python-dotenv>=1.0.1",
    "pyfzf>=0.0.8",
    "pydantic>=2.7.1",
    "httpx>=0.27.0",
    "markitdown",
    "mcp>=1.9.1",
    "markdown-it-py>=3.0.0",
    "prompt-toolkit>=3.0.0",
    "rich==13.7.1",
    "pygments>=2.19.1",
    "mypy>=1.16.0",
    "ruff>=0.11.12",
    "black>=25.1.0",
    "litellm>=1.72.1",
    "inquirer>=3.4.0",
    "arrow>=1.3.0",
    "sqlalchemy>=2.0.41",
    "bcrypt>=4.3.0",
    "python-jose>=3.5.0",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.3",
]
readme = "README.md"
requires-python = ">= 3.13"

[project.scripts]
qx = "qx.main:main"
qx-api = "uvicorn qx.api:app --reload"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/qx"]

[tool.uv.sources]
qx = { workspace = true }

[dependency-groups]
dev = [
    "qx",
]
